[gd_scene load_steps=6 format=3 uid="uid://b4cwd535525ap"]

[ext_resource type="Script" uid="uid://dp3d3aduyrmtn" path="res://scripts/ui/menus/player_menu.gd" id="1_20rq3"]
[ext_resource type="Script" uid="uid://cdqwy6mxd4qwy" path="res://scripts/ui/menus/character_tab.gd" id="2_f0r6v"]
[ext_resource type="PackedScene" uid="uid://u4538t4heese" path="res://scenes/ui/menus/skills_tab.tscn" id="3_s5lmw"]
[ext_resource type="Script" uid="uid://bwbb5eko3ov7e" path="res://scripts/ui/menus/equipment_tab.gd" id="4_fbi1g"]
[ext_resource type="Script" uid="uid://bbod52832org3" path="res://scripts/ui/menus/inventory_tab.gd" id="5_ldd5v"]

[node name="PlayerMenu" type="Control"]
custom_minimum_size = Vector2(400, 430)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20rq3")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.5
offset_right = 215.5
offset_bottom = 66.0
grow_horizontal = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/side_margin = 0
theme_override_constants/icon_separation = 0
tab_alignment = 1
current_tab = 1
clip_tabs = false

[node name="Character" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_f0r6v")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Character"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClassLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer"]
layout_mode = 2
text = "Class: X"

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer"]
layout_mode = 2
text = "Lvl: X"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exp:"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ExpBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer/HBoxContainer"]
layout_mode = 2
value = 50.0

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="Skills" parent="PanelContainer/VBoxContainer/TabContainer" instance=ExtResource("3_s5lmw")]
visible = true
layout_mode = 2

[node name="Equipment" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_fbi1g")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer"]
layout_mode = 2
text = "Equipment"

[node name="EquipmentGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="Head Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Head Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Head Slot"]
layout_mode = 2
text = "Head"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="MainHand Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/MainHand Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/MainHand Slot"]
layout_mode = 2
text = "Main Hand"

[node name="Torso Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Torso Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Torso Slot"]
layout_mode = 2
text = "Torso"

[node name="OffHand Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/OffHand Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/OffHand Slot"]
layout_mode = 2
text = "Off Hand"

[node name="Gloves Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Gloves Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Gloves Slot"]
layout_mode = 2
text = "Gloves"

[node name="Boots Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Boots Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Boots Slot"]
layout_mode = 2
text = "Boots"

[node name="Accessory Slot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Accessory Slot"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Equipment/VBoxContainer/EquipmentGrid/Accessory Slot"]
layout_mode = 2
text = "Accessory"

[node name="Inventory" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_ldd5v")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Inventory"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CategoryTabs" type="TabContainer" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
tab_alignment = 1
current_tab = 0
clip_tabs = false

[node name="All" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Head" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Torso" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Gloves" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Boots" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MainHand" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="OffHand" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="Accessory" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="Consumable" type="Control" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 8

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer/Inventory/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Quests" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Close"
